--- a/div using flexbox.html
+++ b/div using flexbox.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head><title>Flexbox Example</title>
+    <link rel="stylesheet" type="text/css" href="flexbox.css" />
+  </head>
+  <body>
 <div class="parent">
   <div class="child box1">A Child</div>
   <div class="child">
@@ -10,3 +16,5 @@
   </div>
   <div class="child box8">C Child</div>
 </div>
+    </body>
+</html>
