--- a/div using flexbox.html
+++ b/div using flexbox.html
@@ -6,15 +6,10 @@
   <body>
 <div class="parent">
   <div class="child box1">A Child</div>
-  <div class="child">
-    <div class="box2">B Child 1</div>
-    <div class="box3">B Child 2</div>
-    <div class="box4">B Child 3</div>
-    <div class="box5">B Child 4</div>
-    <div class="box6">B Child 5</div>
-    <div class="box7">B Child 6</div>
-  </div>
-  <div class="child box8">C Child</div>
+  
+    <div class="child box2">B Child 1</div>
+    <div class="child box3">B Child 2</div>
+  <div class="child box4">B Child 3</div>
 </div>
     </body>
 </html>
